<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_team_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal" android:weightSum="1">

            <TextView
                android:id="@+id/tv_team1_name"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="0.45"
                android:gravity="right"
                android:text="team1"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="v/s"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_team2_name"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.45"
                android:gravity="left"
                android:text="team2"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_player_names"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/tv_team1_players_name"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:text="players_from_team1"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="0.45"
                android:gravity="right"/>

            <TextView
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="v/s"
                android:textSize="16sp"
                android:layout_weight="0.1"
                android:gravity="center"/>

            <TextView
                android:id="@+id/tv_team2_players_name"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="players_from_team2"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_weight="0.45"
                android:gravity="left"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45">

                <ImageView
                    android:id="@+id/iv_team_1_serve"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_tt_bat"
                    android:layout_weight="0.3"
                    android:gravity="right"/>

                <TextView
                    android:id="@+id/tv_score_team1"
                    style="@style/scoreStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="right"
                    android:text="1"/>

            </LinearLayout>

            <TextView
                style="@style/scoreStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="-"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45">

                <TextView
                    android:id="@+id/tv_score_team2"
                    style="@style/scoreStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.15"
                    android:gravity="left"
                    android:text="0"/>

                <ImageView
                    android:id="@+id/iv_team_2_serve"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_tt_bat"
                    android:layout_weight="0.3"
                    android:gravity="left"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_plus_minus_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_add_point_team1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/ic_add_circle_outline_white_24dp"/>

                <ImageView
                    android:id="@+id/iv_minus_point_team1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_remove_circle_outline_white_24dp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <ImageView
                    android:id="@+id/iv_add_point_team2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="30dp"
                    android:src="@drawable/ic_add_circle_outline_white_24dp"/>

                <ImageView
                    android:id="@+id/iv_minus_point_team2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_remove_circle_outline_white_24dp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_game_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="10dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_game_status_team_1"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/advantage"
                android:layout_weight="0.5"
                android:gravity="center"
                android:visibility="invisible"/>

            <TextView
                android:id="@+id/tv_game_status_team_2"
                style="@style/textViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/advantage"
                android:layout_weight="0.5"
                android:gravity="center"
                android:visibility="invisible"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_duece"
            style="@style/textViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deuce"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_weight="0.5"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_game_over"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:background="@color/scoreColor"
            android:text="@string/game_over"
            android:textColor="@color/textColorWhite"
            android:textSize="20sp"/>

    </LinearLayout>

</ScrollView>
